- 0010976 Adding a user to a project sets 'no email' by default
- 0010767 Clicking on administration/Users in an arbitrary project leads to an error.
- 0010760 The <link> in build update feed should point to the build
- 0010721 Showing build errors (the yellow triangle) does not work
- 0010921 Sorting of time test does not work 
- 0009941 Add buildmanagement functionality to CDash 

CDash 1.6.4, 2010-04-16
------------------------
- 0010290 CDash sends failed-test emails, even when this is disabled
- 0010426 ClientJobSchedule::Save fails because of missing client_jobschedule table columns
- 0010463 Shared project repositories not updated correctly
- 0010332 cdash does not properly handle large xml files
- 0010439 Command Lines in Build Error/Warning Display
- 0010460 Subscription can be altered even if not admin
- 0010313 Site description repeatedly escapes special characters

CDash 1.6.2, 2010-02-08
------------------------

- Support for persistent login
- Better database compression
- New graphs and reports
- Improved coverage visualization
- Better CTest communication
- Expected submission time based on historic average
- Faster load of the main dashboard page
- Improved navigation links
- Remote build management (beta) 
- 0009174 tracing regressions
- 0009276 Postgres does not like the build warnings with '\\' in them
- 0010106 Marking "new" test failures on dashboard "view-failed-only" page.
- 0008735 add ability to get email for missing builds on sites you do not own
- 0008126 Improve Morale
- 0009991 show which failures are new
- 0010027 Feature Request: Compression of test output in the database
- 0008341 itkrobot doesn't trigger message
- 0010071 Empty iphone project page
- 0009790 URL into Trac svn browser wrong
- 0008854 Sort columns in "Manage Coverage Page"
- 0009279 Allow --username for subversion
- 0008171 Display longer history for a single build
- 0008036 Filter out submissions based on IP address